--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.servlet.multipart.max-request-size=5MB
 # Logging
 logging.level.org.springframework.web=INFO
 logging.level.com.openclassrooms.mddapi=DEBUG
+
+# Configuration JWT
+jwt.secret=mddapi_secret_key_for_jwt_token_generation_and_validation_2023
+jwt.expiration=86400000
