--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -10,10 +10,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=8080
 spring.application.name=mdd-api
 
-# Configuration pour les uploads (à ajuster selon vos besoins)
-spring.servlet.multipart.max-file-size=5MB
-spring.servlet.multipart.max-request-size=5MB
-
 # Logging
 logging.level.org.springframework.web=INFO
 logging.level.com.openclassrooms.mddapi=DEBUG
@@ -21,3 +17,9 @@ logging.level.com.openclassrooms.mddapi=DEBUG
 # Configuration JWT
 jwt.secret=mddapi_secret_key_for_jwt_token_generation_and_validation_2023
 jwt.expiration=86400000
+
+
+
+# # Configuration pour les uploads (à ajuster selon vos besoins)
+# spring.servlet.multipart.max-file-size=5MB
+# spring.servlet.multipart.max-request-size=5MB
