--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Configuration de la base de données
-spring.datasource.url=jdbc:mysql://localhost:3306/dev_social_network?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Dorian00
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/dev_social_network?useSSL=false&serverTimezone=UTC}
+spring.datasource.username=${DATABASE_USERNAME:root}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -15,7 +15,7 @@ logging.level.org.springframework.web=INFO
 logging.level.com.openclassrooms.mddapi=DEBUG
 
 # Configuration JWT
-jwt.secret=mddapi_secret_key_for_jwt_token_generation_and_validation_2023
+jwt.secret=${JWT_SECRET:mddapi_secret_key_for_jwt_token_generation_and_validation_2023}
 
 
 
